SERVER-46865 Make collMod not take database MODE_X lock