src/mongo/db/commands/run_aggregate.cpp
@@ -268,12 +268,16 @@ StatusWith<StringMap<ExpressionContext::ResolvedNamespace>> resolveInvolvedNames
         return {StringMap<ExpressionContext::ResolvedNamespace>()};
     }
 
-    // We intentionally do not drop and reacquire our DB lock after resolving the view definition in
-    // order to prevent the definition for any view namespaces we've already resolved from changing.
-    // This is necessary to prevent a cycle from being formed among the view definitions cached in
-    // 'resolvedNamespaces' because we won't re-resolve a view namespace we've already encountered.
-    AutoGetDb autoDb(opCtx, request.getNamespaceString().db(), MODE_IS);
-    Database* const db = autoDb.getDb();
+    // We intentionally do not drop and reacquire our system.views collection lock after resolving
+    // the view definition in order to prevent the definition for any view namespaces we've already
+    // resolved from changing. This is necessary to prevent a cycle from being formed among the view
+    // definitions cached in 'resolvedNamespaces' because we won't re-resolve a view namespace we've
+    // already encountered.
+    AutoGetCollection autoColl(opCtx,
+                               NamespaceString(request.getNamespaceString().db(),
+                                               NamespaceString::kSystemDotViewsCollectionName),
+                               MODE_IS);
+    Database* const db = autoColl.getDb();
     ViewCatalog* viewCatalog = db ? ViewCatalog::get(db) : nullptr;
 
     std::deque<NamespaceString> involvedNamespacesQueue(pipelineInvolvedNamespaces.begin(),
