src/mongo/db/views/view_catalog_test.cpp
@@ -134,8 +134,8 @@ public:
                       const NamespaceString& viewName,
                       const NamespaceString& viewOn,
                       const BSONArray& pipeline) {
-        Lock::DBLock dbLock(operationContext(), viewName.db(), MODE_X);
-        Lock::CollectionLock collLock(operationContext(), viewName, MODE_IX);
+        Lock::DBLock dbLock(operationContext(), viewName.db(), MODE_IX);
+        Lock::CollectionLock collLock(operationContext(), viewName, MODE_X);
         Lock::CollectionLock sysCollLock(
             operationContext(),
             NamespaceString(viewName.db(), NamespaceString::kSystemDotViewsCollectionName),
